fix: slides cutting off on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
   }
 
   dialog {
-    @apply fixed top-0 left-0 m-0 w-full h-full min-w-screen min-h-screen bg-neutral-three opacity-0 hidden p-8 gap-12 -translate-x-full backdrop:bg-neutral-one backdrop:opacity-70 backdrop:backdrop-blur-sm transition-all duration-1000 ease-in-out [&:popover-open]:translate-x-0 open:flex flex-col [&:popover-open]:opacity-100 transition-discrete;
+    @apply fixed top-0 left-0 m-0 w-full h-full min-w-screen min-h-screen text-inherit bg-neutral-three opacity-0 hidden p-8 gap-12 -translate-x-full backdrop:bg-neutral-one backdrop:opacity-70 backdrop:backdrop-blur-sm transition-all duration-1000 ease-in-out [&:popover-open]:translate-x-0 open:flex flex-col [&:popover-open]:opacity-100 transition-discrete;
   }
 
   h2,
@@ -298,7 +298,11 @@
   }
 
   .presentation-slide {
-    @apply min-w-full gap-4 bg-neutral-four snap-center lg:flex-row lg:min-w-175 lg:h-92 xl:gap-8 xl:min-w-234 xl:h-128.75 first-of-type:lg:ml-[calc((100vw-700px)/2)] first-of-type:xl:ml-[calc((100vw-936px)/2)] last-of-type:lg:mr-[calc((100vw-700px)/2)] last-of-type:xl:mr-[calc((100vw-936px)/2)];
+    @apply min-w-full self-start gap-4 bg-neutral-four snap-center lg:self-center lg:flex-row lg:min-w-175 lg:h-92 xl:gap-8 xl:min-w-234 xl:h-128.75 first-of-type:lg:ml-[calc((100vw-700px)/2)] first-of-type:xl:ml-[calc((100vw-936px)/2)] last-of-type:lg:mr-[calc((100vw-700px)/2)] last-of-type:xl:mr-[calc((100vw-936px)/2)];
+  }
+
+  .presentation-slide svg {
+    @apply text-neutral-two-dark;
   }
 
   .slide-current {
